in background-image add no-repeat

--- a/foodMenu/css/common.css
+++ b/foodMenu/css/common.css
@@ -10,7 +10,7 @@
 .public-header .header-logo a {
     height: 54px;
     width: 181px;
-    background: url("../images/index-header-logo.png");
+    background: url("../images/index-header-logo.png") no-repeat;
 }
 
 .public-header .header-nav {
@@ -50,7 +50,7 @@
     height: 55px;
     width: 182px;
     margin-top: -10px;
-    background: url("../images/index-footer-logo.png");
+    background: url("../images/index-footer-logo.png") no-repeat;
 }
 
 .public-footer .footer-col {
