--- a/pmcaff index/css/index.css
+++ b/pmcaff index/css/index.css
@@ -1,21 +1,11 @@
-.container-fluid{
+.index-header{
     background: #8ac279;
     height: 501px;
 }
 
-.container .index-header {
-    height: 63px;
-    margin-top: 50px;
-}
-
 .container .index-nav {
     height: 113px;
-    padding-top: 88px;
-
-}
-
-.container .index-nav .index-nav-item {
-    display: inline-block;
+    margin-top: 50px;
 }
 
 .container .index-banner-box {
@@ -25,7 +15,7 @@
 .container .index-banner-box .index-banner-item {
     width: 236px;
     height: 279px;
-    margin-left: 20px;
+    margin-right: 20px;
     padding: 12px 12px 56px 12px;
     border-radius: 4px;
     background: #fff;
@@ -39,20 +29,20 @@
     display: inline-block;
 }
 
-.container .index-context {
-    background: #ffffff;
-    height: 1102px;
-    font-size: 0;
-}
+/*.container .index-context {*/
+    /*background: #ffffff;*/
+    /*height: 1102px;*/
+    /*font-size: 0;*/
+/*}*/
 
-.container .index-context .index-context-recommended .recommended-item {
-    width: 234px;
-    height: 350px;
-    margin: 10px 0 20px 20px;
-    display: inline-block;
-    background: #000;
-}
+/*.container .index-context .index-context-recommended .recommended-item {*/
+    /*width: 234px;*/
+    /*height: 350px;*/
+    /*margin: 10px 0 20px 20px;*/
+    /*display: inline-block;*/
+    /*background: #000;*/
+/*}*/
 
-.container .index-context .index-context-recommended .recommended-item-lg {
-    width: 490px;
-}
+/*.container .index-context .index-context-recommended .recommended-item-lg {*/
+    /*width: 490px;*/
+/*}*/
